<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_dark"
    android:gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/nav_user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_logo_round"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/nav_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:layout_marginStart="20dp"
        android:textColor="@color/text_color_white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nave_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/text_color_white"
        android:layout_marginBottom="5dp"
        android:text="@string/tagline" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/text_color_white"/>
</LinearLayout>