<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context=".WithdrawActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/withdraw_icon"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withdraw_Layout" />

    <RadioGroup
        android:id="@+id/radio_group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/radio_paytm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center"
            android:text="@string/by_paytm_no"
            android:textColor="@color/text_color_white"
            android:textSize="18sp"
            android:theme="@style/RadioButton" />

        <RadioButton
            android:id="@+id/radio_upi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/by_upi_id"
            android:textColor="@color/text_color_white"
            android:textSize="18sp"
            android:theme="@style/RadioButton" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_balance"
        android:textColor="@color/text_color_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="Activation is Pending. Due to Heavy Traffic it can take 15-30 days."
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_editext" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_background_border"
        android:backgroundTint="@color/text_color_white"
        android:padding="15dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/primary_dark"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/ed_editext"
        app:layout_constraintStart_toStartOf="@+id/ed_editext"
        app:layout_constraintTop_toBottomOf="@+id/ed_editext" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bank_transfer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_background_border"
        android:backgroundTint="@color/text_color_white"
        android:padding="15dp"
        android:text="Withdraw in your Bank"
        android:textAllCaps="false"
        android:textColor="@color/primary_dark"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/btn_submit_request"
        app:layout_constraintStart_toStartOf="@+id/btn_submit_request"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit_request" />



    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/withdraw_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:backgroundTint="@color/primary_dark"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/withdraw_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/primary_dark"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Withdraw Here:-"
            app:titleTextColor="@color/text_color_white" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_editext"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/enter_your_paytm_no"
        android:textColorHint="@color/text_color_white"
        app:hintTextColor="@color/text_color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eed_edittext"
            style="@style/MyTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/text_color_white"
            android:textCursorDrawable="@drawable/cursor_color" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

